[project]
name = "gmailmcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.1.1",
    "google-api-python-client>=2.192.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "google-cloud-secret-manager>=2.26.0",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
]
